deploy/telemetry/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: telemetry
  labels:
    istio-injection: disabled
