deploy/telemetry/resources/grafana.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-virtualservice
  namespace: telemetry
spec:
  hosts:
    - "grafana.egoavara.net"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
