deploy/telemetry/resources/jaeger.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-virtualservice
  namespace: telemetry
spec:
  hosts:
    - "jaeger.egoavara.net"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jaeger-query
            port:
              number: 16686
