deploy/telemetry/resources/kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-virtualservice
  namespace: telemetry
spec:
  hosts:
    - "kiali.egoavara.net"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kiali
            port:
              number: 20001
