deploy/telemetry/resources/prometheus.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-virtualservice
  namespace: telemetry
spec:
  hosts:
    - "prometheus.egoavara.net"
  gateways:
    - gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: oauth2proxy-prometheus
            port:
              number: 80
